--- a/app/assets/stylesheets/module/heritage_create_form.scss
+++ b/app/assets/stylesheets/module/heritage_create_form.scss
@@ -1,10 +1,6 @@
 .heritage-form {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   width: 50vw;
-  margin: 0 auto;
+  margin: 120px auto;
   border: 1px solid #cacaca;
   border-radius: 10px;
   &__title {
@@ -12,7 +8,7 @@
     text-align: center;
     margin: 50px 0;
   }
-  &__name, &__content, &__country-name, &__country-name, &__image, &__submit, &__lat, &__lng, &__tag {
+  &__name, &__content, &__country-name, &__country-name, &__image, &__submit, &__lat, &__lng, &__tag, &__label {
     display: block;
     width: 50%;
     margin: 30px auto;
