--- a/app/views/heritages/edit.html.erb
+++ b/app/views/heritages/edit.html.erb
@@ -4,7 +4,16 @@
     <%= f.text_field :name, placeholder: "世界遺産名", class: 'heritage-form__name' %>
     <%= f.text_area :content, placeholder: "世界遺産の概要", class: 'heritage-form__content' %>
     <%= f.text_field :country, placeholder: "国名", value: @country_name, class: 'heritage-form__country-name' %>
-    <%= f.file_field :images, multiple: true, class: "heritage-form__image" %>
+    
+    <%= f.label :pc_image, "pc_image", class: "heritage-form__label" %>
+    <%= f.file_field :pc_image, class: "heritage-form__image" %>
+    
+    <%= f.label :mobile_image, "mobile_image", class: "heritage-form__label" %>
+    <%= f.file_field :mobile_image, class: "heritage-form__image" %>
+
+    <%= f.label :slideshow_images, "slideshow_images", class: "heritage-form__label" %>
+    <%= f.file_field :slideshow_images, multiple: true, class: "heritage-form__image" %>    
+
     <%= f.text_field :lat, placeholder: "緯度", class: 'heritage-form__lat' %>
     <%= f.text_field :lng, placeholder: "経度", class: 'heritage-form__lng' %>
     <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name, class: "heritage-form__tag" %>
