--- a/app/views/continents/show.html.erb
+++ b/app/views/continents/show.html.erb
@@ -30,7 +30,7 @@
 </div>
 
 <script
-  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_KEY'] %>&callback=initMap&libraries=marker&v=beta"
+  src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.dig(:google_map_api, :key_id) %>&callback=initMap&libraries=marker&v=beta"
   defer
 ></script>
 <script>
