--- a/app/views/shared/_heritage_map.html.erb
+++ b/app/views/shared/_heritage_map.html.erb
@@ -1,6 +1,6 @@
   <div class="heritage-map" id="map"></div>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_KEY'] %>&callback=initMap&libraries=marker&v=beta" defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.dig(:google_map_api, :key_id) %>&callback=initMap&libraries=marker&v=beta" defer></script>
 <script>
   function initMap() {
     const myLatLng = { lat: <%= @heritage.lat %>, lng: <%= @heritage.lng %> };
