--- a/app/views/users/mail_sent.html.erb
+++ b/app/views/users/mail_sent.html.erb
@@ -2,7 +2,7 @@
   <div class="notice-modal">
     <%= image_tag("check.svg", class: "notice-modal__icon") %>
     <p class="notice-modal__main-msg">入力されたメールアドレス宛にメールを送信しました</p>
-    <p class="notice-modal__sub-msg">そちらをご確認いただき、記載されたURLにアクセスしアカウントの登録を完了させてください</p>
+    <p class="notice-modal__sub-msg">メールに記載されたURLにアクセスしていただき、アカウントの登録を完了させてください</p>
     <%= link_to"OK", root_url, class: "notice-modal__ok-btn" %>
   </div>
 </div>
